--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "ocareport"
 version = "1.1.0"
-description = "CLI tool to check Oracle Cloud Infrastructure (OCI) compute shape availability across regions, availability domains, and fault domains"
+description = "Instantly check Oracle Cloud Infrastructure (OCI) compute capacity and shape availability across all regions. A powerful CLI tool for tracking VMs, bare metal, and high-demand GPUs like NVIDIA A100, H100, and L40S."
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.8"
@@ -47,8 +47,18 @@ keywords = [
     "nvidia",
     "a100",
     "h100",
+    "a10",
+    "l40s",
+    "v100",
     "gpu-availability",
-    "gpu-cloud"
+    "gpu-cloud",
+    # Broader search terms
+    "cloud-infrastructure",
+    "iaas",
+    "paas",
+    "resource-management",
+    "cloud-automation",
+    "python"
 ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
